# actix-ws-template

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: api_error.rs  handlers.rs  main.rs
