[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[features]
tls = ["dep:openssl", "actix-web/openssl"]

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
openssl = { version = "0.10.54", features = ["v110"], optional = true }
anyhow = "1.0.72"
log = "0.4.19"
env_logger = "0.10.0"
dotenvy = "0.15.7"
